buildscript {
    ext {
        springBootVersion = '2.1.6.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.tonkar'
version = '3.0'
sourceCompatibility = 1.12

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
}

dependencies {
    compile group: 'org.springframework.boot', name: 'spring-boot-starter'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-logging'
    compile('org.springframework.boot:spring-boot-starter-web') {
        exclude module: "spring-boot-starter-tomcat"
    }
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow'
    compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
    compile group: 'org.jsoup', name: 'jsoup', version: '1.12.1'
    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
    // Security
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    compile group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '2.1.1'
    compile group: 'com.google.apis', name: 'google-api-services-androidpublisher', version: 'v3-rev95-1.25.0'
    // Excel
    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.0'
    // Misc
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
    testCompile('org.springframework.boot:spring-boot-starter-test')
}
